k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: springmusicapp-ingress
  namespace: vitess
  labels: {
    dns: "route53"
  }
  annotations:
    domainName: "acldevsre.de"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:ap-northeast-2:400603430485:certificate/0ad3fb61-e9b1-4dbb-b687-78003f0212b7"
    service.beta.kubernetes.io/aws-load-balancer-ssl-negotiation-policy: "ELBSecurityPolicy-TLS-1-2-2017-01"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
 spec:
  rules:
    - host: springmusic.acldevsre.de
      http:
        paths:
          - path: /
            backend:
              serviceName: springmusicapp-svc
              servicePort: 80
